# upfire-rust

./: .gitignore  Cargo.toml  upfire.code-workspace
assets/texture/: planets.ron
config/: bindings.ron  display.ron
src/: main.rs  systems.rs
src/components/: mod.rs  overlay.rs  planets.rs  structures.rs
src/states/: main_game.rs
src/systems/: mining.rs  mod.rs  movement.rs  overlay.rs  planets.rs
